<resources>
    <string name="app_name" translatable="false">202020 app</string>
    <string name="waiting">waiting</string>
    <string name="settings">Settings</string>
    <string name="vibrations">Vibrations</string>
    <string name="sound_files">Sound Files</string>
    <string name="alarm_types">Alarm Types</string>
    <string name="reset_time">Reset Time</string>
    <string name="none_vibration">None</string>
    <string name="short_vibration">Short</string>
    <string name="medium_vibration">Medium</string>
    <string name="long_vibration">Long</string>
    <string name="default_soundFile">Default Alarm</string>
    <string name="notification_soundFile">Notification Sound</string>
    <string name="choose_soundFile">Choose from your music</string>
    <string name="alarm_inexact">Alarm Inexact</string>
    <string name="alarm_exact">Alarm Exact</string>
    <string name="reset_time_set">Reset time set</string>
    <string name="reset_time_infinite">Infinite</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_on">On</string>
    <string name="notifications_off">Off</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="alarm_stop">Alarm Stop</string>
    <string name="alarm_reset">Alarm Reset</string>
    <string name="done">Done!</string>
    <string name="minutes">minutes</string>
    <string name="help">Help</string>
    <string name="app_description">This app is supposed to help your vision when looking
        at a computer screen. This is done using a repeating alarm that every time it
        goes off you look out at something that is 20 metres away for 20 seconds. To
        use the app change the timer to the required time (recommended time: 20 minutes)
        which is the numbers above the start button. Then change the settings which is
        below the start button to what you want. Then just tap on the start button to
        begin. When the timer has started the buttons will change. After the set time
        has passed an alarm will go off to tell you to look outside. You can then reset
        the timer, stop the timer or wait 20 seconds for the alarm to reset.</string>
    <string name="channel_name">202020 App</string>
    <string name="channel_description">A alarm to go off every 20 minutes to help eyesight.</string>
</resources>